what us make different section alignment fixed

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -2961,11 +2961,12 @@ font-weight: 500;
     }
 
     .makes-us-different-text1{
-    
+    height: 400px;
     }
 
     
     .makes-us-different-text2{
+        height: 450px;
     
     }
 
